[gd_scene load_steps=8 format=3 uid="uid://cpofpj24bp2m4"]

[ext_resource type="Script" uid="uid://ckpyidb43ptnv" path="res://Player/player.gd" id="1_4ntmi"]
[ext_resource type="Texture2D" uid="uid://7j1y4aqb4k4n" path="res://Assets/Player.png" id="1_l8h54"]
[ext_resource type="AudioStream" uid="uid://bjfgfomq5t1r1" path="res://Audio/thruster.wav" id="3_gwnis"]
[ext_resource type="AudioStream" uid="uid://cjwj6iixvlnjh" path="res://Audio/thruster_looped.wav" id="4_k53q1"]
[ext_resource type="AudioStream" uid="uid://keo8ekv670ml" path="res://Audio/out_of_fuel_beep.wav" id="5_k53q1"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_4ntmi"]
particle_flag_rotate_y = true
particle_flag_disable_z = true
emission_shape_scale = Vector3(1, 1, 0)
angle_min = -8.29999
angle_max = 194.2
angular_velocity_min = -1.60933e-05
angular_velocity_max = 177.23
orbit_velocity_min = -0.308
orbit_velocity_max = 0.245
gravity = Vector3(0, 25, 0)
color = Color(1, 0.93321, 0.721522, 1)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4ntmi"]
radius = 6.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_4ntmi")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_l8h54")

[node name="JetpackFlame" type="GPUParticles2D" parent="Sprite2D"]
position = Vector2(-7, 10)
rotation = 0.359538
scale = Vector2(2, 2)
amount = 30
explosiveness = 0.02
randomness = 0.02
process_material = SubResource("ParticleProcessMaterial_4ntmi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 1)
shape = SubResource("CapsuleShape2D_4ntmi")

[node name="JetSound_Tap" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-7, 8)
rotation = 0.359538
scale = Vector2(2, 2)
stream = ExtResource("3_gwnis")

[node name="JetSound_Loop" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-7, 8)
rotation = 0.359538
scale = Vector2(2, 2)
stream = ExtResource("4_k53q1")

[node name="LowFuelWarning" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_k53q1")
